# heretek

./: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  RELEASE.md  justfile
.github/workflows/: binaries.yml  coverage.yml  main.yml  mdbook.yml
.github/workflows/cache/: action.yml
assets/: heretek.txt
book/: book.toml
book/src/: SUMMARY.md  colors.md  commands.md  configuration.md  development.md  installation.md  introduction.md  keybindings.md  remote.md  usage.md
book/src/features/: README.md  backtrace.md  hexdump.md  instructions.md  main-view.md  mapping.md  output.md  registers.md  source.md  stack.md  symbols.md
book/theme/: custom.css
book/vhs/: demo  demo.c  demo_dyn  hexdump_view.tape  instructions_view.tape  main_view.tape  mapping_view.tape  registers_view.tape  setup_break17.cmds  setup_break17_dyn.cmds  setup_dyn.cmds  setup_static.cmds  source_view.tape  stack_view.tape  symbols_view.tape  tab_cycle.tape  test_tab.tape
crates/cogitator/: Cargo.toml
crates/cogitator/src/: lib.rs
docs/: commands.md  env-vars.md  features.md
docs/vhs/: hexdump.tape  main.tape  mapping.tape  readme.tape
src/: deref.rs  gdb.rs  main.rs  mi.rs  register.rs  stream_output.rs
src/gdb/: exec_result.rs  stream_output.rs
src/gdb/exec_result/: done.rs  running.rs
src/gdb/exec_result/recv/: asm_insns.rs  changed_registers.rs  mod.rs  register_names.rs  register_values.rs  result_memory.rs  symbols.rs  value.rs
src/snapshots/: heretek__tests__render_app.snap  heretek__tests__segfault.snap
src/ui/: asm.rs  bt.rs  heap_parser.rs  hexdump.rs  input.rs  mapping.rs  mod.rs  output.rs  registers.rs  source.rs  stack.rs  symbols.rs  title.rs
src/ui/hexdump/malloc/: glibc.rs  mod.rs
test-sources/: repeated_ptr.source  segfault.source  test.source
