[package]
name = "heretek"
version = "0.1.0-rc7"
edition = "2021"
description = "Yet Another GDB TUI"
license = "MIT/Apache-2.0"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
crossterm = "0.28.1"
deku = { version = "0.18.1", default-features = false, features = ["alloc", "std"] }
env_logger = "0.11.5"
log = "0.4.22"
ratatui = "0.29.0"
regex = "1.11.1"
tui-input = "0.11.0"

[profile.release]
strip = true

# Release(dist) binaries are setup for maximum runtime speed, at the cost of CI time
[profile.dist]
inherits = "release"
codegen-units = 1
lto = true
strip = true
