[package]
name = "heretek"
version = "0.6.0"
edition = "2024"
description = "GDB TUI Dashboard for the understanding of vast knowledge"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wcampbell0x2a/heretek"
categories = ["development-tools"]
keywords = ["gdb", "tui", "debugging", "embedded", "gdbserver"]

[workspace]
members = [
    "crates/cogitator"
]

[dependencies]
cogitator = { version = "^0.1.0", path = "crates/cogitator"}

ansi-to-tui = "7.0.0"
anyhow = "1.0.98"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
crossterm = "0.28.1"
deku = { version = "0.18.1", default-features = false, features = ["alloc", "std"] }
env_logger = "0.11.5"
evalexpr = "12.0.2"
hex = "0.4.3"
log = "0.4.22"
once_cell = "1.20.2"
ratatui = "0.29.0"
regex = "1.11.1"
tui-input = "0.11.0"

[dev-dependencies]
insta = "1.41.1"
test-assets-ureq = "0.3.0"
libc = "0.2.169"

[profile.release]
strip = true

# Release(dist) binaries are setup for maximum runtime speed, at the cost of CI time
[profile.dist]
inherits = "release"
codegen-units = 1
lto = true
strip = true
