[package]
name = "heretek"
version = "0.7.0"
edition = "2024"
description = "GDB TUI Dashboard for the understanding of vast knowledge"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wcampbell0x2a/heretek"
categories = ["development-tools"]
keywords = ["gdb", "tui", "debugging", "embedded", "gdbserver"]

[dependencies]
ansi-to-tui = "7.0.0"
anyhow = "1.0.98"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
clap-cargo = "0.18.0"
deku = { version = "0.20.0", default-features = false, features = ["alloc", "std"] }
env_logger = "0.11.5"
evalexpr = "13.0.0"
hex = "0.4.3"
log = "0.4.22"
once_cell = "1.20.2"
ratatui = "0.29.0"
regex = "1.11.1"
tui-input = "0.14.0"
arborium = { version = "2.1.1", features = ["lang-c", "lang-cpp", "lang-rust"] }

[dev-dependencies]
insta = "1.41.1"
test-assets-ureq = "0.3.0"
libc = "0.2.169"
rstest = "0.26"

[profile.release]
strip = true

# Release(dist) binaries are setup for maximum runtime speed, at the cost of CI time
[profile.dist]
inherits = "release"
codegen-units = 1
lto = true
strip = true
